@@ -10,6 +10,7 @@ Changes in version 1.9.2 beta (2010-03-18):
 - Added missing include in ScaledDC.h file preventing wxSF from build if precompiled header were used.
 - Added new helper macro SF_ADD_COMPONENT(comp, name) usefull when a shape's component should be added to its parent
   by the parent itself and not by serializer/diagram manager (typically in constructor of so called composite shape).
+- Fixed build error occured during compilation of wxSFDemo sample project on wxWidgets without defined wxOPEN and wxSAVE symbols.
 
 Changes in version 1.9.1 beta (2010-01-15):
 --------------------------------------------
